# qwik-analyzer

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  README.md  RESEARCH_oxc_semantic_local_vs_external.md  index.cjs  index.d.ts  index.js  package.json  plugin.ts  pnpm-lock.yaml  test_new_analyzer.js  test_simple.js  tsconfig.json  utils.ts
.github/workflows/: CI.yml  ci.yml
__test__/: analyzer.spec.ts  debug-prop-injection.spec.ts  integration.spec.ts  integration_test.ts  prop-injection.spec.ts  real-world-scenarios.spec.ts  simple-analysis.spec.ts  test_enhanced_prop_injection.js  test_transform.js  test_transform_prop_injection.js  transform-props.spec.ts  transform.spec.ts
examples/: integration_test.ts  napi_vite_test.ts  simple_test.rs
examples/test_files/: direct_example.tsx  indirect_example.tsx
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
qwik-app/: package.json  pnpm-lock.yaml  vite.config.ts
research/: IMPLEMENTATION_ANALYSIS.md  OXC_API_RESEARCH_ENHANCED.md  RESEARCH_FINDINGS.md
src/: ast_utils.rs  component_analyzer.rs  jsx_transform.rs  lib.rs  qwik_analyzer.rs  research.md
src/component_analyzer/: component_presence.rs  import_resolver.rs  jsx_analysis.rs  mod.rs  transformations.rs  utils.rs
src/vite/: plugin.d.ts  plugin.js  plugin.ts
(+16 files in other folders)
