[package]
edition = "2021"
name = "qwik-analyzer"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = "3.0.0-beta.2"
napi-derive = "3.0.0-beta.2"
oxc_allocator = "0.72.1"
oxc_ast = "0.72.1"
oxc_parser = "0.72.1"
oxc_semantic = "0.72.1"
oxc_span = "0.72.1"
oxc_syntax = "0.72.1"
oxc_codegen = "0.72.1"
oxc_transformer = "0.72.1"
oxc_resolver = "11.0.0"
phf = { version = "0.11.3", features = ["macros"] }

[build-dependencies]
napi-build = "2.2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
